fix som layout issues

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -42,7 +42,8 @@ ol {
 
 @media screen and (min-width: 640px) {
   html,
-  body {
+  body,
+  p {
     font-size: 19px;
     line-height: 26px;
   }
